correct z-index for leaflet in all browsers including ie7, not creating dummy markers in ie7

--- a/server/static/survey/styles/main.css
+++ b/server/static/survey/styles/main.css
@@ -269,7 +269,7 @@ form .btn-block {
 
 
 
-.leaflet-top {
+.map_wrapper .leaflet-top {
     z-index: 0 !important;
 }
 /**
